@startuml

class Coworker <<table>> {
    **<<PK>> Id : Int**
    Name : NVarChar(100)

    <<PK>> PK_Coworker()
}

class Product <<table>> {
    **<<PK>> <<surrogate>> ProductNO : UniqueIdentifier**
    Name : NVarChar(100)
    Amount : Int
    TimeReceived : DateTime
    ExpiringDate : DateTime

    <<PK>> PK_Product()
}

class Category <<table>> {
    **<<PK>> <<surrogate>> ID : UniqueIdentifier**
    FoodName : NVarChar(100)
    FoodType : NVarChar(50)

    <<PK>> PK_Category()
}

class Depreciation <<table>> {
    **<<PK>> <<surrogate>> ID : UniqueIdentifier**
    Date : DateTime
    //<<FK>> ProductNO : UniqueIdentifier//

    <<PK>> PK_Depreciation()
    <<FK>> FK_Depreciation_Product(ProductNO)
}

class RegisterPaper <<table>> {
    **<<PK>> <<surrogate>> ID : UniqueIdentifier**
    Amount : Int
    ExpiringDate : DateTime
    RegisterDate : DateTime
    //<<FK>> ProductNO : UniqueIdentifier//
    //<<FK>> CategoryID : UniqueIdentifier//
    //<<FK>> CoworkerID : Int//

    <<PK>> PK_RegisterPaper()
    <<FK>> FK_RegisterPaper_Product(ProductNO)
    <<FK>> FK_RegisterPaper_Category(CategoryID)
    <<FK>> FK_RegisterPaper_Coworker(CoworkerID)
}

Coworker "1" -- "0..*" RegisterPaper
Product "1" -- "0..*" RegisterPaper
Category "1" -- "0..*" RegisterPaper
Product "1" -- "0..*" Depreciation

@enduml